{
    "name": "ControlInterface",
    "maps": [
        {
            "name": "miner",
            "id": "8ea07afa-b959-4899-af88-c031f2b4d540",
            "actions": [
                {
                    "name": "mouseClick",
                    "type": "Button",
                    "id": "df0ab721-73ff-4bd0-8654-0b49f71ba898",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "mousePosition",
                    "type": "Value",
                    "id": "8cb8b02a-cce6-4e1c-8c32-1a5b18695329",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "wasd",
                    "type": "Value",
                    "id": "60ac85bc-7c2f-4f19-ab88-b7925f476d7d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "miningDirection",
                    "type": "Value",
                    "id": "09eb758d-9a9b-4167-8b64-f84c071987cc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "enteract",
                    "type": "Button",
                    "id": "fb18bc37-1f30-438f-be48-7ba09f15631b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "650dc5e7-9ed8-46b0-88e3-cf280b49e55b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73c58ccd-befa-426c-a080-28daf43448fc",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "keyboard",
                    "id": "a635b350-af05-4d67-8fe4-660b3c90f38d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "wasd",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4299a56b-3804-44a2-8863-7487f36e2255",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "wasd",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3374bee2-4e65-458d-9209-8448de15d083",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "wasd",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5effbd4b-bc99-4e7b-9d17-1a4ca9215cc2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "wasd",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1d130456-d480-45c7-b836-0d6b044db04b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "wasd",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "61a9e44d-f353-474a-bbb0-4c0fd7ccc445",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "miningDirection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e2b5626f-21e7-435e-b21c-ade06de3bb00",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "miningDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1e4510f5-81f4-4231-a3e9-ee1377e37392",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "miningDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "47cd5bcb-e5cc-4597-b766-df751a9d8eca",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "miningDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dc868d6f-18ab-4177-b76d-d58719660995",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "miningDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a0f04a38-8e69-47e4-ba4d-76ec55fe6fab",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "enteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}